# scope

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
src/scope/: test_tui.py
