[metadata]
name = scope-hpc
version = attr: scope.__version__
author = CoopTeam-CERFACS
author_email = coop@cerfacs.fr
description = SCOPE: the SuperCOmPuting sEntry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clapeyre/scope
project_urls =
    Homepage = https://github.com/clapeyre/scope
    Documentation = https://github.com/clapeyre/scope
    Bug Tracker = https://github.com/clapeyre/scope/-/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT
keywords =
    Tool
    CFD
    Scientific Computing

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    textual
    loguru

[options.entry_points]
console_scripts =
    arnica = scope.cli:main_cli

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-coverage
    pytest-allclose
